--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
       You are powerful.<br>
       You are valid.<br>
       And you are still extremely cringe.
+      (i told chatgpt to make it cringe, not call you cringe) -LD
     </p>
 
     <button onclick="alert('🎉 HAPPY BIRTHDAY OLIVER 🎉\\n\\nYou are now canonically old.')">
