--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
       Oliver, you are 27.<br>
       You are powerful.<br>
       You are valid.<br>
-      And you are still extremely cringe.
-      (i told chatgpt to make it cringe, not call you cringe) -LD
+      And you are still extremely cringe.<br>
+      Edit: (i told chatgpt to make the website cringe, not call you cringe) -LD
     </p>
 
     <button onclick="alert('🎉 HAPPY BIRTHDAY OLIVER 🎉\\n\\nYou are now canonically old.')">
